# Techfest2025

./: .gitignore  README.md  docker-compose.yml
chrome-extension/: package.json
chrome-extension/chrome-extension/: manifest.ts
server/: .env.example  .gitignore  README.md  build.sh  dockerfile  main.py  models.py  requirements.txt  results.json  results_GE.json  results_mothershipbus.json  results_nea.json  results_philippines.json  results_starlink.json  web_search_nodes.json
server/neondb/: api.py  core.py  database.py
server/neondb/apis/: blacklist_api.py  credible_api.py  rurldata_api.py
server/neondb/examples/: api_example.py
server/neondb/models/: blacklist.py  credible.py  hero.py  rurldata.py  website.py
server/rurl/: README.md  pyproject.toml
server/rurl/src/rurl/: crew.py  main.py  research_crew.py
server/rurl/src/rurl/config/: agents.yaml  research_agents.yaml  research_tasks.yaml  tasks.yaml
server/rurl/src/rurl/data/: example_web_analyser_output.json
server/rurl/src/rurl/flows/: main_flow.py
server/rurl/src/rurl/tools/: ImageAnalyserTask.py  TextAnalyserTask.py  WebAnalyserTask.py  WebParsingTask.py  detect_forgery_tool.py  llm_client.py  parse_web.py  query_db_tool.py  tavily_tool.py  text_analyser_tool.py
server/rurl_flow/: README.md  crewai_flow.html  pyproject.toml  results.json
server/rurl_flow/src/rurl_flow/: main.py  results.json  web_search_nodes.json
server/rurl_flow/src/rurl_flow/crews/analysts/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/analysts/src/analysts/: analysts.py  main.py
server/rurl_flow/src/rurl_flow/crews/analysts/src/analysts/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/analysts/src/analysts/tools/: TextAnalyserTask.py  WebAnalyserTask.py  WebParsingTask.py  image_analyser_tool.py  wiki_search_tool.py
server/rurl_flow/src/rurl_flow/crews/forensics/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/forensics/src/forensics/: forensics.py  main.py
server/rurl_flow/src/rurl_flow/crews/forensics/src/forensics/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/forensics/src/forensics/tools/: detect_forgery_tool.py  image_websearch_tool.py
server/rurl_flow/src/rurl_flow/crews/image_forensics/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/image_forensics/src/image_forensics/: image_forensics.py  main.py
server/rurl_flow/src/rurl_flow/crews/image_forensics/src/image_forensics/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/image_forensics/src/image_forensics/tools/: detect_forgery_tool.py
server/rurl_flow/src/rurl_flow/crews/insights/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/insights/src/insights/: insights.py  main.py
server/rurl_flow/src/rurl_flow/crews/insights/src/insights/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/insights/src/insights/tools/: insights_tool.py
server/rurl_flow/src/rurl_flow/crews/researchers/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/researchers/src/researchers/: crew.py  main.py  researchers.py
server/rurl_flow/src/rurl_flow/crews/researchers/src/researchers/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/researchers/src/researchers/tools/: tavily_tool.py
server/rurl_flow/src/rurl_flow/crews/validators/: README.md  pyproject.toml
server/rurl_flow/src/rurl_flow/crews/validators/src/validators/: crew.py  main.py  validators.py
server/rurl_flow/src/rurl_flow/crews/validators/src/validators/config/: agents.yaml  tasks.yaml
server/rurl_flow/src/rurl_flow/crews/validators/src/validators/tools/: internal_audit_tool.py  query_db_tool.py
server/rurl_flow/src/rurl_flow/tools/: LlmClient.py  analyse_news_tool.py  globals.py  llm_client.py  web_analyser_tool.py  web_parsing_tool.py  web_researcher_tool.py
webapp/: global.css  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
webapp/app/: layout.tsx  page.tsx
webapp/components/ui/: input.tsx  (+5 more)
webapp/util/: process-img.ts
webapp_legacy/: package.json
webapp_legacy/app/: page.tsx
webapp_legacy/util/: process-img.ts
(+22 files in other folders)
