[project]
name = "rurl"
version = "0.1.0"
description = "rurl using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
rurl = "rurl.main:run"
run_crew = "rurl.main:run"
train = "rurl.main:train"
replay = "rurl.main:replay"
test = "rurl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
