[project]
name = "analysts"
version = "0.1.0"
description = "analysts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
analysts = "analysts.main:run"
run_crew = "analysts.main:run"
train = "analysts.main:train"
replay = "analysts.main:replay"
test = "analysts.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
