[project]
name = "forensics"
version = "0.1.0"
description = "forensics using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
forensics = "forensics.main:run"
run_crew = "forensics.main:run"
train = "forensics.main:train"
replay = "forensics.main:replay"
test = "forensics.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
