[project]
name = "insights"
version = "0.1.0"
description = "insights using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
insights = "insights.main:run"
run_crew = "insights.main:run"
train = "insights.main:train"
replay = "insights.main:replay"
test = "insights.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
