[project]
name = "researchers"
version = "0.1.0"
description = "researchers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
researchers = "researchers.main:run"
run_crew = "researchers.main:run"
train = "researchers.main:train"
replay = "researchers.main:replay"
test = "researchers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
